[gd_scene load_steps=2 format=3]

[ext_resource path="res://Game Controller/PauseMenu.gd" type="Script" id="1"]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 446.0
margin_top = 245.0
margin_right = 578.0
margin_bottom = 355.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 14.0
text = "Pause Menu"
align = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 132.0
margin_bottom = 38.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../MainMenuButton")
focus_next = NodePath("../MainMenuButton")
focus_previous = NodePath("../QuitButton")
text = "Resume"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 132.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../RestartButton")
focus_next = NodePath("../RestartButton")
focus_previous = NodePath("../ResumeButton")
text = "Main Menu"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 132.0
margin_bottom = 86.0
focus_neighbour_top = NodePath("../MainMenuButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../MainMenuButton")
text = "Restart Checkpoint"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 132.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../RestartButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../RestartButton")
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
